--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "@types/node": "^12.20.10",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "@types/react-router-dom": "^5.1.7",
     "autoprefixer": "^9.8.6",
+    "framer-motion": "^4.1.9",
+    "history": "^4.10.1",
     "postcss": "^7.0.35",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-laag": "^2.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sass": "^1.32.11",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2",
